# draco

./: LICENSE  README.md  draco_refactoring_plan.md  dynamics.py  final_refinement.py  gnina_docking.py  ligand_preparation.py  local_minimization.py  main.py  overlay.py  playground.ipynb  pocket_coloring.py  pocketeer_module.ipynb  project_plan.md  protein_preparation.py  pyproject.toml  sar_scoring.py  test_dynamics.py  test_dynamics.sbatch  test_dynamics_1.sbatch  test_dynamics_2.sbatch  test_dynamics_3.sbatch  test_installation.sbatch  test_overlay_minimize.py  test_overlay_minimize.sbatch  visualization.py
deprecated/: local_minimization.py  overlay.py  pocket_coloring.py  test_overlay_minimize.py
draco/: constants.py  dynamics.py  final_refinement.py  gnina_docking.py  ligand_preparation.py  main.py  protein_preparation.py  sar_scoring.py
src/draco/: __init__.py  cli.py  constants.py  docking.py  dynamics.py  final_refinement.py  gnina_docking.py  ligand_preparation.py  pocket.py  protein_preparation.py  refinement.py  sar_scoring.py  utils.py
