[project]
name = "draco"
version = "0.1.0"
description = "MD-based structure-activity relationship scoring pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atomworks",
    "pocketeer>=0.3.0",
    "py3Dmol",
]

[project.scripts]
draco = "draco.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["draco*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
draco = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyarrow = "==17.0.0"
rdkit = ">=2024.3.5,<2025.9"
openmmforcefields = ">=0.15.1,<0.16"
openff-toolkit = ">=0.18.0,<0.19"
openmm = ">=8.4.0,<9"
cuda-version = ">=12,<13"
pdbfixer = ">=1.12,<2"
ruff = ">=0.15.7,<0.16"
dimorphite-dl = ">=2.0.2,<3"
