[project]
name = "draco"
version = "0.1.0"
description = "Dynamic receptor activity-guided conformational optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atomworks",
    "pocketeer>=0.3.0",
    "py3Dmol", "bioemu[cuda]>=1.3.0,<2",
]

[project.scripts]
draco = "draco.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["draco*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
draco = { path = ".", editable = true }
meeko = ">=0.5.1,<0.8"
pyarrow = "==17.0.0"
rdkit = ">=2024.3.5,<2025.9"
gemmi = ">=0.7.4"

[tool.pixi.tasks]

[tool.pixi.dependencies]
openmmforcefields = ">=0.15.1,<0.16"
openff-toolkit = ">=0.18.0,<0.19"
openmm = ">=8.4.0,<9"
cuda-version = ">=12,<13"
pdbfixer = ">=1.12,<2"
ruff = ">=0.15.7,<0.16"
scikit-learn = ">=1.8.0,<2"
seaborn = ">=0.13.2,<0.14"
